# media-resolver-mcp

./: .env.example  .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml.example
src/media_resolver/: __init__.py  config.py  models.py  request_logger.py  server.py
src/media_resolver/admin/: routes.py
src/media_resolver/admin/templates/: base.html  config.html  dashboard.html  request_detail.html  requests.html  test.html
src/media_resolver/disambiguation/: llm_provider.py  service.py
src/media_resolver/mopidy/: capabilities.py  client.py
src/media_resolver/podcast/: resolver.py  rss_parser.py
src/media_resolver/tools/: music.py  playback.py  podcast.py
tests/: conftest.py
tests/integration/: test_server.py
tests/unit/: test_config.py  test_disambiguation.py  test_models.py  test_mopidy_client.py  test_rss_parser.py  test_tools_playback.py
